--- a/meme-ory/src/components/MemeCard/style.css
+++ b/meme-ory/src/components/MemeCard/style.css
@@ -1,28 +1,27 @@
 .card {
   background: #fff;
-  border-radius: 2px;
+  border-radius: 10px;
   height: 325px;
   margin: 1rem;
   position: relative;
   width: 325px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
-  text-align: left;
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 100%;
+  border-radius: 10px;
   overflow: hidden;
-  text-align: center;
-  background:#6CADDC;
+  background: rgb(34, 83, 2);
 }
+
 .card > .img-container > img {
-  width: 60%
+  width: 50%
 }
 
 .card > .content {
   padding-left: 1rem;
   padding-right: 1rem;
-  font-size: 15px;
 }
 
 .card > .content > ul {
@@ -31,17 +30,4 @@
 
 .card > .content > ul > li {
   margin-top: 18px;
-}
-
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
 }
