--- a/meme-ory/src/components/Nav/style.css
+++ b/meme-ory/src/components/Nav/style.css
@@ -1,19 +1,19 @@
 nav {
   width: 100%;
-  font-size: 3rem;
-  color: #fff;
-  margin-bottom: 50px;
-  background-color: rgb(56, 56, 56);
+  font-size: 1rem;
+  color: rgb(43, 84, 40);
+  margin-bottom: 20px;
+  background-color: transparent;
   height: auto;
   font-family: 'Ubuntu', sans-serif;;
 }
 
 a {
-  color: red;
+  color: white;
 }
 
 a:hover {
-  color: blue;
+  color: rgb(43, 84, 40);
   text-decoration: none;
 }
 
@@ -21,17 +21,15 @@ nav li {
   display: inline-block;
   padding: 26px 0;
   width: 25%;
-  /* text-align: center; */
 }
 
 ul {
-  /* padding-left: 0px; */
   display: flex;
   align-items: center;
 }
 
 @media only screen and (max-width: 750px) {
-  #cur-sco, #top-sco {
-    font-size: 2rem;
+  #cur-score, #top-score {
+    font-size: 1rem;
   }
 }
