--- a/meme-ory/src/components/Title/style.css
+++ b/meme-ory/src/components/Title/style.css
@@ -1,9 +1,9 @@
 .title {
   width: 100%;
   text-align: center;
-  font-size: 2rem;
-  color: #444;
-  margin-bottom: 50px;
+  font-size: 1rem;
+  color: rgb(48, 121, 0);
+  margin-bottom: 2%;
   padding-left: 3%;
   padding-right: 3%;  
 }
