--- a/meme-ory/src/components/MemeCard/style.css
+++ b/meme-ory/src/components/MemeCard/style.css
@@ -1,11 +1,12 @@
 .card {
   background: #fff;
   border-radius: 10px;
-  height: 325px;
+  height: 250px;
   margin: 1rem;
   position: relative;
-  width: 325px;
+  width: 250px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  border: 5px solid  rgb(34, 83, 2);
 }
 
 .card > .img-container {
@@ -16,18 +17,12 @@
 }
 
 .card > .img-container > img {
-  width: 50%
+  width: 100%
 }
 
-.card > .content {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.card:hover {
+  scale: 1.1;
 }
 
-.card > .content > ul {
-  list-style-type: none;
-}
-
-.card > .content > ul > li {
-  margin-top: 18px;
-}
+.grow { transition: all .2s ease-in-out; }
+.grow:hover { transform: scale(1.1); }
