--- a/meme-ory/src/components/MemeCard/style.css
+++ b/meme-ory/src/components/MemeCard/style.css
@@ -2,17 +2,18 @@
   background: #fff;
   border-radius: 10px;
   height: 250px;
-  margin: 1rem;
+  margin: 5%;
   position: relative;
+  top: 50px;
   width: 250px;
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   border: 5px solid  rgb(34, 83, 2);
+  z-index: 0;
 }
 
 .card > .img-container {
   height: 100%;
   border-radius: 10px;
-  overflow: hidden;
   background: rgb(34, 83, 2);
 }
 
@@ -20,9 +21,11 @@
   width: 100%
 }
 
-.card:hover {
-  scale: 1.1;
+.grow { 
+  transition: all .2s ease-in-out; 
 }
 
-.grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.1); }
+.grow:hover { 
+  transform: scale(1.1);
+  box-shadow: 0 7px 10px #999, 0 7px 10px #999;
+}
