--- a/meme-ory/src/index.css
+++ b/meme-ory/src/index.css
@@ -7,4 +7,8 @@ html, body, #root {
   padding: 0;
   margin: 0;
   height: 100%;
+  background-image: url("comic-book.png");
+  background-size: cover;
+  background-repeat: repeat;
 }
+
